[package]
name = "rock_run"
description = "Rock Run: Rose's odyssey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["jpeg"] }
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
bevy_fluent = "0.9.0"
bevy_rapier2d = "0.26.0"
enum-iterator = "2.1.0"
fluent = "0.16.1"
iyes_perf_ui = { version = "0.2.3" }
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
raqote = { version = "0.8.4", default-features = false, features = [
  "pathfinder_geometry",
] }
serde = "1.0.203"
serde_json = "1.0.118"
thiserror = "1.0.61"
tiled = { version = "0.12.0", default-features = false }
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }

[target.x86_64-unknown-linux-gnu.dependencies.bevy]
version = "0.13.2"
features = ["wayland"]
# dynamic linking must be removed for release builds
# this is handled by aliases in .cargo/config.toml

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.4.0"

# Binary target
[[bin]]
name = "rock_run"
path = "src/main.rs"

# Library target
[lib]
name = "screen_map"
path = "src/screen_map.rs"
