[package]
name = "rock_run"
description = "Rock Run: Rose's odyssey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["jpeg"] }
bevy_asset_loader = { version = "0.21.0" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", rev = "7ebe37b38f66bb78406f26d76618db819f5d0221" }
bevy_fluent = "0.10.0"
bevy_pkv = "0.11.1"
bevy_rapier2d = "0.27.0"
enum-iterator = "2.1.0"
fluent = "0.16.1"
iyes_perf_ui = { version = "0.3.0" }
leafwing-input-manager = "0.14.0"
rand = "0.8.5"
raqote = { version = "0.8.5", default-features = false, features = [
  "pathfinder_geometry",
] }
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.65"
tiled = { version = "0.12.1", default-features = false }
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }

[target.x86_64-unknown-linux-gnu.dependencies.bevy]
version = "0.14.2"
features = ["wayland"]
# dynamic linking must be removed for release builds
# this is handled by aliases in .cargo/config.toml

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.4.1"

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"

[features]
atlas = []

# Binary target
[[bin]]
name = "rock_run"
path = "src/main.rs"

# Library target
[lib]
name = "screen_map"
path = "src/screen_map.rs"
