[package]
name = "rock_run"
description = "Rock Run: Rose's odyssey"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.1", features = ["jpeg"] }
bevy_asset_loader = { version = "0.23.0" }
bevy_ecs_tilemap = { version = "0.16.0" }
bevy_fluent = { git = "https://github.com/kgv/bevy_fluent", rev = "8ddc058a5fa8f20c6da9dc26b920cf9a2255150b" }
bevy_pkv = "0.13.0"
bevy_rapier2d = "0.30.0"
enum-iterator = "2.1.0"
# Fluent cannot be upgraded yet because bevy_fluent is using fluent 0.16.1
fluent = "0.16.1"
iyes_perf_ui = { version = "0.5.0" }
leafwing-input-manager = "0.17.1"
rand = "0.9.1"
raqote = { version = "0.8.5", default-features = false, features = [
  "pathfinder_geometry",
] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tiled = { version = "0.14.0", default-features = false }
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.x86_64-unknown-linux-gnu.dependencies.bevy]
version = "0.16.1"
features = ["wayland"]
# dynamic linking must be removed for release builds
# this is handled by aliases in .cargo/config.toml

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.4.1"

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"

[features]
atlas = []

# Binary target
[[bin]]
name = "rock_run"
path = "src/main.rs"

# Library target
[lib]
name = "screen_map"
path = "src/screen_map.rs"
